updates to be used by BseTrack.
Mon Apr 28 05:02:28 2003  Tim Janik  <timj@gtk.org>

        * zintern/mono-wave.bse: updates to be used by BseTrack.

        * bsetrack.[hc]: support BseWave property concurrently to the
        "snet" property. "wave" tracks are played through an internal
        standard mono synth.

        * bseproject.[hc]: added bse_project_create_intern_synth() to merge
        an internal standard synth into the project.

        * bsestandardsynths.[hc]: renamed bse_standard_synth_lookup()
        to bse_standard_synth_inflate().

        * bsestorage.c (restore_container_child): check container's child
        filter before restoring a child.

        * bsecontainer.[hc]: added check_restore() methods to prevent
        certain children from being restored.

svn path=/trunk/; revision=1055

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,5 +1,7 @@
 Mon Apr 28 05:02:28 2003  Tim Janik  <timj@gtk.org>
 
+	* zintern/mono-wave.bse: updates to be used by BseTrack.
+
 	* bsetrack.[hc]: support BseWave property concurrently to the
 	"snet" property. "wave" tracks are played through an internal
 	standard mono synth.
