--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Overview of Changes in BEAST/BSE 0.5.2:
 
+* Tracks now support waves directly as Synth input
 * Fixed time zone handling
 * Added WAVE file monitoring ability
 * Fixed sample rate adjustments in preferences
