--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- get compilation with guile-1.6 to work
 - fix patch selection popup
 - add new test song containing a wave track
 - fix saving of internal objects
