--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 Overview of Changes in BEAST/BSE 0.5.2:
 
 * Tracks now support waves directly as Synth input
+* Added wave/synth selection dialog for tracks
+* Major improvements to filw/wave selection dialogs
 * Fixed time zone handling
-* Added WAVE file monitoring ability
-* Fixed sample rate adjustments in preferences
+* Added WAVE file beast recording ability
+* Reenabked sample rate adjustments in preferences
 * Image (Logo) improvements [Alper Ersoy]
 * Documentation improvements [Alper, Timj]
 * Miscellaneous code fixes
