--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Sun May 11 15:35:47 2003  Tim Janik  <timj@gtk.org>
+
+	* sfigluecodec.c (encoder_process_message): fix NULL/void returns.
+
 Tue May  6 04:17:19 2003  Tim Janik  <timj@gtk.org>
 
         * sfifilecrawler.[hc]: added SfiFileCrawler, a new mechanism to
