--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Sun May 11 15:54:44 2003  Tim Janik  <timj@gtk.org>
+
+	* shell/bse-scm-glue.boot: added stubs for bse-item-get.
+
+	* beast-gtk/bstparamview.c (bst_param_view_rebuild): show non-writable
+	fields only for --hints.
+
+	* shell/bsescminterp.c: simplify smob handling.
+	(bse_scm_glue_get_prop): 
+	(bse_scm_glue_set_prop): 
+	(bse_scm_signal_connect): fix proxy type assertions.
+
 Sun May 11 04:36:05 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: supply @NOTDVLBUILD@ Makefile substitution and
